--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
             </div>
         </section>
 
+        <footer id="footer">
+            <h1>This is a Parallax footer</h1>
+        </footer>
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="scripts/parallax.min.js"></script>
         <script src="scripts/masonry.js"></script>
