adding id to slider section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <section class="slick-slider">
+        <section class="slick-slider" id="slider">
             <h2 class="sub-title">Slider Showcase</h2>
             <div class="slider">
                 <div class="slide">
